objects/tffa__FinancingItem__c.object
<CustomObject>
    <description>List of financing items captured for current lending application which includes all the charges imposed on the buyer and also funding done against each item.</description>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Amount captured against the item.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Captures category of financing item such as - Govt Taxes | Insurance costs | Fees</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancingItemCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional description captured along with the financing item.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancingTable__c</fullName>
        <description>Reference to the parent financing table object</description>
        <label>Financing Table</label>
        <referenceTo>tffa__FinancingTable__c</referenceTo>
        <relationshipLabel>FinancingItems</relationshipLabel>
        <relationshipName>FinancingItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates type of the financing item capturing if its charge being imposed or funding by the buyer.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancingItemType</valueSetName>
        </valueSet>
    </fields>
    <label>Financing Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financing Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>